src/OpenCvSharp.Native/include/open_cv_sharp/imgproc.h

OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_warp_perspective(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    const jyppx_ocv_mat* transform,
    int width,
    int height,
    int flags,
    int border_mode,
    double border_value_v0,
    double border_value_v1,
    double border_value_v2,
    double border_value_v3);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_get_rotation_matrix2d(
    float center_x,
    float center_y,
    double angle,
    double scale,
    jyppx_ocv_mat** out_transform);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_get_affine_transform(
    const float* src_xy,
    const float* dst_xy,
    jyppx_ocv_mat** out_transform);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_get_perspective_transform(
    const float* src_xy,
    const float* dst_xy,
    int solve_method,
    jyppx_ocv_mat** out_transform);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_invert_affine_transform(
    const jyppx_ocv_mat* transform,
    jyppx_ocv_mat* inverse_transform);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_remap(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    const jyppx_ocv_mat* map1,
    const jyppx_ocv_mat* map2,
    int interpolation,
    int border_mode,
    double border_value_v0,
    double border_value_v1,
    double border_value_v2,
    double border_value_v3);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_convert_maps(
    const jyppx_ocv_mat* map1,
    const jyppx_ocv_mat* map2,
    jyppx_ocv_mat* dstmap1,
    jyppx_ocv_mat* dstmap2,
    int dstmap1type,
    int nninterpolation);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_get_structuring_element(
    int shape,
    int width,
    int height,
    int anchor_x,
    int anchor_y,
    jyppx_ocv_mat** out_element);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_erode(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    const jyppx_ocv_mat* kernel,
    int anchor_x,
    int anchor_y,
    int iterations,
    int border_type,
    int has_border_value,
    double border_value_v0,
    double border_value_v1,
    double border_value_v2,
    double border_value_v3);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_dilate(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    const jyppx_ocv_mat* kernel,
    int anchor_x,
    int anchor_y,
    int iterations,
    int border_type,
    int has_border_value,
    double border_value_v0,
    double border_value_v1,
    double border_value_v2,
    double border_value_v3);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_morphology_ex(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    int op,
    const jyppx_ocv_mat* kernel,
    int anchor_x,
    int anchor_y,
    int iterations,
    int border_type,
    int has_border_value,
    double border_value_v0,
    double border_value_v1,
    double border_value_v2,
    double border_value_v3);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_line(
    jyppx_ocv_mat* img,
    int x1,
    int y1,
    int x2,
    int y2,
    double color_v0,
    double color_v1,
    double color_v2,
    double color_v3,
    int thickness,
    int line_type,
    int shift);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_arrowed_line(
    jyppx_ocv_mat* img,
    int x1,
    int y1,
    int x2,
    int y2,
    double color_v0,
    double color_v1,
    double color_v2,
    double color_v3,
    int thickness,
    int line_type,
    int shift,
    double tip_length);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_clip_line_rect(
    int rect_x,
    int rect_y,
    int rect_width,
    int rect_height,
    int* pt1_x,
    int* pt1_y,
    int* pt2_x,
    int* pt2_y,
    int* intersects);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_polylines(
    jyppx_ocv_mat* img,
    const int* points_xy,
    int point_count,
    int is_closed,
    double color_v0,
    double color_v1,
    double color_v2,
    double color_v3,
    int thickness,
    int line_type,
    int shift);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_fill_poly(
    jyppx_ocv_mat* img,
    const int* points_xy,
    int point_count,
    double color_v0,
    double color_v1,
    double color_v2,
    double color_v3,
    int line_type,
    int shift,
    int offset_x,
    int offset_y);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_ellipse2_poly_count(
    int center_x,
    int center_y,
    int axes_width,
    int axes_height,
    int angle,
    int arc_start,
    int arc_end,
    int delta,
    int* point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_ellipse2_poly_fill(
    int center_x,
    int center_y,
    int axes_width,
    int axes_height,
    int angle,
    int arc_start,
    int arc_end,
    int delta,
    int* points_xy,
    int point_capacity,
    int* point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_contour_area(
    const int* points_xy,
    int point_count,
    int oriented,
    double* area);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_find_contours_count(
    const jyppx_ocv_mat* image,
    int mode,
    int method,
    int offset_x,
    int offset_y,
    int* contour_count,
    int* total_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_find_contours_fill(
    const jyppx_ocv_mat* image,
    int mode,
    int method,
    int offset_x,
    int offset_y,
    int* contours_xy,
    int point_capacity,
    int* contour_lengths,
    int contour_capacity,
    int* hierarchy,
    int hierarchy_capacity,
    int* contour_count,
    int* total_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_draw_contours(
    jyppx_ocv_mat* image,
    const int* contours_xy,
    const int* contour_lengths,
    int contour_count,
    int contour_index,
    double color_v0,
    double color_v1,
    double color_v2,
    double color_v3,
    int thickness,
    int line_type,
    const int* hierarchy,
    int has_hierarchy,
    int max_level,
    int offset_x,
    int offset_y);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_moments_points(
    const int* points_xy,
    int point_count,
    int binary_image,
    double* values,
    int value_capacity);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_moments_mat(
    const jyppx_ocv_mat* array,
    int binary_image,
    double* values,
    int value_capacity);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_hu_moments(
    const double* moments_values,
    int value_count,
    double* hu_values,
    int hu_capacity);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_arc_length(
    const int* points_xy,
    int point_count,
    int closed,
    double* length);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_approx_poly_dp_count(
    const int* curve_xy,
    int point_count,
    double epsilon,
    int closed,
    int* approx_point_count);