src/OpenCvSharp/Internal/Interop/NativeMethods.DllImport.cs


        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_warp_perspective")]
        internal static extern int ImgProcWarpPerspective(
            IntPtr src,
            IntPtr dst,
            IntPtr transform,
            int width,
            int height,
            int flags,
            int borderMode,
            double borderValueV0,
            double borderValueV1,
            double borderValueV2,
            double borderValueV3);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_get_rotation_matrix2d")]
        internal static extern int ImgProcGetRotationMatrix2D(
            float centerX,
            float centerY,
            double angle,
            double scale,
            out IntPtr transform);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_get_affine_transform")]
        internal static extern unsafe int ImgProcGetAffineTransform(
            float* srcXy,
            float* dstXy,
            out IntPtr transform);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_get_perspective_transform")]
        internal static extern unsafe int ImgProcGetPerspectiveTransform(
            float* srcXy,
            float* dstXy,
            int solveMethod,
            out IntPtr transform);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_invert_affine_transform")]
        internal static extern int ImgProcInvertAffineTransform(
            IntPtr transform,
            IntPtr inverseTransform);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_remap")]
        internal static extern int ImgProcRemap(
            IntPtr src,
            IntPtr dst,
            IntPtr map1,
            IntPtr map2,
            int interpolation,
            int borderMode,
            double borderValueV0,
            double borderValueV1,
            double borderValueV2,
            double borderValueV3);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_convert_maps")]
        internal static extern int ImgProcConvertMaps(
            IntPtr map1,
            IntPtr map2,
            IntPtr dstmap1,
            IntPtr dstmap2,
            int dstmap1type,
            int nninterpolation);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_get_structuring_element")]
        internal static extern int ImgProcGetStructuringElement(
            int shape,
            int width,
            int height,
            int anchorX,
            int anchorY,
            out IntPtr element);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_erode")]
        internal static extern int ImgProcErode(
            IntPtr src,
            IntPtr dst,
            IntPtr kernel,
            int anchorX,
            int anchorY,
            int iterations,
            int borderType,
            int hasBorderValue,
            double borderValueV0,
            double borderValueV1,
            double borderValueV2,
            double borderValueV3);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_dilate")]
        internal static extern int ImgProcDilate(
            IntPtr src,
            IntPtr dst,
            IntPtr kernel,
            int anchorX,
            int anchorY,
            int iterations,
            int borderType,
            int hasBorderValue,
            double borderValueV0,
            double borderValueV1,
            double borderValueV2,
            double borderValueV3);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_morphology_ex")]
        internal static extern int ImgProcMorphologyEx(
            IntPtr src,
            IntPtr dst,
            int op,
            IntPtr kernel,
            int anchorX,
            int anchorY,
            int iterations,
            int borderType,
            int hasBorderValue,
            double borderValueV0,
            double borderValueV1,
            double borderValueV2,
            double borderValueV3);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_line")]
        internal static extern int ImgProcLine(
            IntPtr img,
            int x1,
            int y1,
            int x2,
            int y2,
            double colorV0,
            double colorV1,
            double colorV2,
            double colorV3,
            int thickness,
            int lineType,
            int shift);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_arrowed_line")]
        internal static extern int ImgProcArrowedLine(
            IntPtr img,
            int x1,
            int y1,
            int x2,
            int y2,
            double colorV0,
            double colorV1,
            double colorV2,
            double colorV3,
            int thickness,
            int lineType,
            int shift,
            double tipLength);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_clip_line_rect")]
        internal static extern int ImgProcClipLineRect(
            int rectX,
            int rectY,
            int rectWidth,
            int rectHeight,
            ref int pt1X,
            ref int pt1Y,
            ref int pt2X,
            ref int pt2Y,
            out int intersects);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_polylines")]
        internal static extern int ImgProcPolylines(
            IntPtr img,
            int[] pointsXy,
            int pointCount,
            int isClosed,
            double colorV0,
            double colorV1,
            double colorV2,
            double colorV3,
            int thickness,
            int lineType,
            int shift);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_fill_poly")]
        internal static extern int ImgProcFillPoly(
            IntPtr img,
            int[] pointsXy,
            int pointCount,
            double colorV0,
            double colorV1,
            double colorV2,
            double colorV3,
            int lineType,
            int shift,
            int offsetX,
            int offsetY);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_ellipse2_poly_count")]
        internal static extern int ImgProcEllipse2PolyCount(
            int centerX,
            int centerY,
            int axesWidth,
            int axesHeight,
            int angle,
            int arcStart,
            int arcEnd,
            int delta,
            out int pointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_ellipse2_poly_fill")]
        internal static extern int ImgProcEllipse2PolyFill(
            int centerX,
            int centerY,
            int axesWidth,
            int axesHeight,
            int angle,
            int arcStart,
            int arcEnd,
            int delta,
            int[] pointsXy,
            int pointCapacity,
            out int pointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_contour_area")]
        internal static extern int ImgProcContourArea(
            int[] pointsXy,
            int pointCount,
            int oriented,
            out double area);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_contour_area")]
        internal static unsafe extern int ImgProcContourAreaPtr(
            int* pointsXy,
            int pointCount,
            int oriented,
            out double area);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_find_contours_count")]
        internal static extern int ImgProcFindContoursCount(
            IntPtr image,
            int mode,
            int method,
            int offsetX,
            int offsetY,
            out int contourCount,
            out int totalPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_find_contours_fill")]
        internal static extern int ImgProcFindContoursFill(
            IntPtr image,
            int mode,
            int method,
            int offsetX,
            int offsetY,
            int[] contoursXy,
            int pointCapacity,
            int[] contourLengths,
            int contourCapacity,
            int[] hierarchy,
            int hierarchyCapacity,
            out int contourCount,
            out int totalPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_draw_contours")]
        internal static extern int ImgProcDrawContours(
            IntPtr image,
            int[] contoursXy,
            int[] contourLengths,
            int contourCount,
            int contourIndex,
            double colorV0,
            double colorV1,
            double colorV2,
            double colorV3,
            int thickness,
            int lineType,
            int[] hierarchy,
            int hasHierarchy,
            int maxLevel,
            int offsetX,
            int offsetY);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_moments_points")]
        internal static extern int ImgProcMomentsPoints(
            int[] pointsXy,
            int pointCount,
            int binaryImage,
            double[] values,
            int valueCapacity);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_moments_points")]
        internal static unsafe extern int ImgProcMomentsPointsPtr(
            int* pointsXy,
            int pointCount,
            int binaryImage,
            double* values,
            int valueCapacity);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_moments_mat")]
        internal static extern int ImgProcMomentsMat(
            IntPtr array,
            int binaryImage,
            double[] values,
            int valueCapacity);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_hu_moments")]
        internal static extern int ImgProcHuMoments(
            double[] momentsValues,
            int valueCount,
            double[] huValues,
            int huCapacity);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_arc_length")]
        internal static extern int ImgProcArcLength(
            int[] pointsXy,
            int pointCount,
            int closed,
            out double length);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_arc_length")]
        internal static unsafe extern int ImgProcArcLengthPtr(
            int* pointsXy,
            int pointCount,
            int closed,
            out double length);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_approx_poly_dp_count")]
        internal static extern int ImgProcApproxPolyDPCount(
            int[] curveXy,
            int pointCount,
            double epsilon,
            int closed,
            out int approxPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_approx_poly_dp_count")]
        internal static unsafe extern int ImgProcApproxPolyDPCountPtr(
            int* curveXy,
            int pointCount,
            double epsilon,
            int closed,
            out int approxPointCount);
